🐛Fix deactivate account button shrinking on mobile

--- a/unirecka/account/static/account/profile.css
+++ b/unirecka/account/static/account/profile.css
@@ -18,7 +18,7 @@
 }
 
 @media (max-width: 412px) {
-    .btn-danger {
+    .btn-danger:not(#deactivate) {
         padding: 0px;
         width: 30px;
         height: 30px;
